# DDLKiller

./: .gitignore  CMakeLists.txt  README.md  install_service.sh  line_counter.py
json_template/: add.json  complete.json  delete.json  modify.json  uncomplete.json
json_template/full_update/: full_update.json  full_update_noresponse.json  full_update_noresponse_compact.json  full_update_request.json  full_update_request_compact.json
json_template/modifications/: add.json  complete.json  delete.json  modify.json  uncomplete.json
json_template/response/: response.json  response_add.json  response_delete.json
src/: main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h  TestDatabase  TestDatabase.cpp  test.db
src/json/: JsonParser.cpp  JsonParser.h  JsonSender.cpp  JsonSender.h  TestJson.cpp
src/websocket/: WebSocketServer.cpp  WebSocketServer.h  WebSocketSession.cpp  WebSocketSession.h
